--- a/Iter1/pom.xml
+++ b/Iter1/pom.xml
@@ -8,7 +8,7 @@
   </parent>
 
   <artifactId>Iter1</artifactId>
-
+  <version>0.4.3</version>
   <name>Iter1</name>
   <!-- FIXME change it to the project's website -->
   <url>http://www.example.com</url>
