--- a/pom.xml
+++ b/pom.xml
@@ -12,5 +12,6 @@
     <module>Iter3</module>
     <module>Iter5</module>
     <module>Iter7</module>
+    <module>Iter6</module>
   </modules>
 </project>
